Fix to spacing in code

--- a/css/main.css
+++ b/css/main.css
@@ -37,16 +37,16 @@ img {
 .photo:last-child {
   display: none;
 }
+
 @media only screen and (min-width: 25em) {
 
   .photo:nth-child(2),
   .photo:nth-child(3),
   .photo:nth-child(4),
-  .photo:nth-child(5){
+  .photo:nth-child(5) {
     width: 50%;
     display: block;
   }
-
 
 }
 
@@ -54,27 +54,25 @@ img {
 
   .photo:nth-child(2),
   .photo:nth-child(3),
-  .photo:nth-child(4){
+  .photo:nth-child(4) {
     width: 33.33%;
   }
 
-  .photo:nth-child(5){
+  .photo:nth-child(5) {
     display: none;
   }
-
 
 }
 
 @media only screen and (min-width: 60em) {
 
-      .photo:first-child{
-        width: 66.66%;
-      }
+  .photo:first-child {
+    width: 66.6666%;
+  }
 
-    .photo:nth-child(5){
-      display: block;
-      width: 33.3333%;
-    }
-
+  .photo:nth-child(5) {
+    display: block;
+    width: 33.3333%;
+  }
 
 }
